--- a/views/404.html
+++ b/views/404.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Product</title>
-    <style>
+    <title>Page Not Found</title>
+     <style>
         body {
             padding: 0;
             margin: 0;
@@ -38,34 +38,68 @@
 
         .main-header__item a {
             text-decoration: none;
-             color: black;
+            color: black;
         }
 
         .main-header__item a:hover,
         .main-header__item a:active,
         .main-header__item a.active {
-            color: #6200ff
+            color: #3e00a1;
         }
+
+        .product-form {
+            width: 20rem;
+            max-width: 90%;
+            margin: auto;
+        }
+
+        .form-control {
+            margin: 1rem 0;
+        }
+
+        .form-control label, .form-control input {
+            display: block;
+            width: 100%;
+        }
+
+        .form-control input {
+            border: 1px solid  #dbc441;
+            font: inherit;
+            border-radius: 2px;
+
+        }
+
+        button {
+            font: inherit;
+            border: 1px solid #3e00a1;
+            color: #3e00a1;
+            background: white;
+            border-radius: 3px;
+            cursor: pointer;
+            margin: 1rem 0;
+        }
+
+        button:hover, button:active {
+            background-color: #3e00a1;
+            color: white;
+        } 
 
     </style>
 </head>
 <body>
-    <header class="main-header">
+     <header class="main-header">
         <nav class="main-header__nav">
             <ul  class="main-header__item-list">
                 <li class="main-header__item">
-                    <a href="/" class="active">Shop</a>
+                    <a href="/" >Shop</a>
                 </li>
                 <li class="main-header__item">
-                    <a href="/add-product">Add Product</a>
+                    <a href="/add-product" class="active">Add Product</a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <h1>My Products</h1>
-        <p>List of all the products...</p>
-    </main>
+    <h1>Page Not Found!</h1>
 </body>
 </html>
